fix: wrap all mentions with span

--- a/prophecies/apps/frontend/src/main.scss
+++ b/prophecies/apps/frontend/src/main.scss
@@ -40,6 +40,14 @@ html {
   font-family: $badge-font-family;
 }
 
+.mention {
+  font-weight: bold;
+
+  &--is-me {
+    color: $danger;
+  }
+}
+
 .custom-pagination--compact {
   .custom-pagination__form input {
     border-radius: 0 $input-border-radius $input-border-radius 0;
